5httpsmanualmultiple/app-ingress.yaml
# app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hoverfly-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - www.hoverflylagoons.co.uk
    - hoverflylagoons.co.uk
    secretName: hoverflylagoons-ssl
  rules:
  - host: www.hoverflylagoons.co.uk
    http:
      paths:
      - backend:
          serviceName: app1-svc
          servicePort: 80
        path: /
  - host: hoverflylagoons.co.uk
    http:
      paths:
      - backend:
          serviceName: redirect-svc
          servicePort: 80
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: programgood-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - www.programgood.net
    - programgood.net
    secretName: programgood-ssl
  rules:
  - host: www.programgood.net 
    http:
      paths:
      - backend:
          serviceName: app2-svc
          servicePort: 80
        path: /
  - host: programgood.net
    http:
      paths:
      - backend:
          serviceName: redirect-svc
          servicePort: 80
        path: /
